paddle_bytecode/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEFORE_ASYNC_WITH
    BEGIN_FINALLY
    BUILD_CONST_KEY_MAP
    BUILD_LIST
    BUILD_LIST_UNPACK
    BUILD_MAP
    BUILD_MAP_UNPACK
    BUILD_MAP_UNPACK_WITH_CALL
    BUILD_SET
    BUILD_SET_UNPACK
    BUILD_SLICE
    BUILD_STRING
    BUILD_TUPLE
    BUILD_TUPLE_UNPACK
    BUILD_TUPLE_UNPACK_WITH_CALL
    CALL_FINALLY
    CALL_FUNCTION
    CALL_FUNCTION_EX
    CALL_FUNCTION_KW
    CALL_METHOD
    COMPARE_OP
    DELETE_ATTR
    DELETE_DEREF
    DELETE_FAST
    DELETE_GLOBAL
    DELETE_NAME
    DELETE_SUBSCR
    DUP_TOP
    DUP_TOP_TWO
    END_ASYNC_FOR
    END_FINALLY
    EXTENDED_ARG
    FORMAT_VALUE
    FOR_ITER
    GET_ANEXT
    IMPORT_FROM
    IMPORT_NAME
    IMPORT_STAR
    JUMP_ABSOLUTE
    JUMP_FORWARD
    JUMP_IF_FALSE_OR_POP
    JUMP_IF_TRUE_OR_POP
    LIST_APPEND
    LOAD_BUILD_CLASS
    LOAD_CLASSDEREF
    LOAD_CLOSURE
    LOAD_METHOD
    MAKE_FUNCTION
    MAP_ADD
    NOP
    POP_BLOCK
    POP_EXCEPT
    POP_FINALLY
    POP_JUMP_IF_FALSE
    POP_JUMP_IF_TRUE
    PRINT_EXPR
    RAISE_VARARGS
    SETUP_ANNOTATIONS
    SETUP_ASYNC_WITH
    SETUP_FINALLY
    SETUP_WITH
    SET_ADD
    WITH_CLEANUP_FINISH
    WITH_CLEANUP_START
    YIELD_FROM
    YIELD_VALUE

Grammar

Rule 0     S' -> statement_list
Rule 1     expression -> LOAD_GLOBAL
Rule 2     store -> POP_TOP
Rule 3     expression -> UNARY_POSITIVE expression
Rule 4     expression -> LOAD_CONST
Rule 5     store -> STORE_GLOBAL
Rule 6     expression -> UNARY_NEGATIVE expression
Rule 7     expression -> LOAD_FAST
Rule 8     store -> STORE_FAST
Rule 9     expression -> UNARY_NOT expression
Rule 10    expression -> LOAD_NAME
Rule 11    store -> STORE_NAME
Rule 12    expression -> UNARY_INVERT expression
Rule 13    expression -> LOAD_DEREF
Rule 14    store -> STORE_DEREF
Rule 15    expression -> LOAD_ATTR expression
Rule 16    store -> STORE_ATTR expression
Rule 17    expression -> BINARY_MATRIX_MULTIPLY expression expression
Rule 18    store -> STORE_SUBSCR expression expression
Rule 19    expression -> INPLACE_MATRIX_MULTIPLY expression expression
Rule 20    store_list -> store
Rule 21    expression -> BINARY_POWER expression expression
Rule 22    store_list -> store_list store
Rule 23    expression -> BINARY_MULTIPLY expression expression
Rule 24    expression -> BINARY_MODULO expression expression
Rule 25    expression -> BINARY_ADD expression expression
Rule 26    statement_list -> statement
Rule 27    expression -> BINARY_SUBTRACT expression expression
Rule 28    statement_list -> statement_list statement
Rule 29    expression -> BINARY_SUBSCR expression expression
Rule 30    statement -> store expression
Rule 31    expression -> BINARY_FLOOR_DIVIDE expression expression
Rule 32    unpack_expression -> ROT_TWO expression expression
Rule 33    expression -> BINARY_TRUE_DIVIDE expression expression
Rule 34    unpack_expression -> ROT_TWO ROT_THREE expression expression expression
Rule 35    expression -> INPLACE_FLOOR_DIVIDE expression expression
Rule 36    unpack_expression -> ROT_TWO ROT_THREE ROT_FOUR expression expression expression expression
Rule 37    expression -> INPLACE_TRUE_DIVIDE expression expression
Rule 38    expression -> GET_AITER expression
Rule 39    unpack_expression -> UNPACK_SEQUENCE expression
Rule 40    expression -> INPLACE_ADD expression expression
Rule 41    unpack_expression -> UNPACK_EX expression
Rule 42    expression -> INPLACE_SUBTRACT expression expression
Rule 43    statement -> store_list unpack_expression
Rule 44    expression -> INPLACE_MULTIPLY expression expression
Rule 45    statement -> RETURN_VALUE expression
Rule 46    expression -> INPLACE_MODULO expression expression
Rule 47    expression -> BINARY_LSHIFT expression expression
Rule 48    expression -> BINARY_RSHIFT expression expression
Rule 49    expression -> BINARY_AND expression expression
Rule 50    expression -> BINARY_XOR expression expression
Rule 51    expression -> BINARY_OR expression expression
Rule 52    expression -> INPLACE_POWER expression expression
Rule 53    expression -> GET_ITER expression
Rule 54    expression -> GET_YIELD_FROM_ITER expression
Rule 55    expression -> GET_AWAITABLE expression
Rule 56    expression -> INPLACE_LSHIFT expression expression
Rule 57    expression -> INPLACE_RSHIFT expression expression
Rule 58    expression -> INPLACE_AND expression expression
Rule 59    expression -> INPLACE_XOR expression expression
Rule 60    expression -> INPLACE_OR expression expression

Terminals, with rules where they appear

BEFORE_ASYNC_WITH    : 
BEGIN_FINALLY        : 
BINARY_ADD           : 25
BINARY_AND           : 49
BINARY_FLOOR_DIVIDE  : 31
BINARY_LSHIFT        : 47
BINARY_MATRIX_MULTIPLY : 17
BINARY_MODULO        : 24
BINARY_MULTIPLY      : 23
BINARY_OR            : 51
BINARY_POWER         : 21
BINARY_RSHIFT        : 48
BINARY_SUBSCR        : 29
BINARY_SUBTRACT      : 27
BINARY_TRUE_DIVIDE   : 33
BINARY_XOR           : 50
BUILD_CONST_KEY_MAP  : 
BUILD_LIST           : 
BUILD_LIST_UNPACK    : 
BUILD_MAP            : 
BUILD_MAP_UNPACK     : 
BUILD_MAP_UNPACK_WITH_CALL : 
BUILD_SET            : 
BUILD_SET_UNPACK     : 
BUILD_SLICE          : 
BUILD_STRING         : 
BUILD_TUPLE          : 
BUILD_TUPLE_UNPACK   : 
BUILD_TUPLE_UNPACK_WITH_CALL : 
CALL_FINALLY         : 
CALL_FUNCTION        : 
CALL_FUNCTION_EX     : 
CALL_FUNCTION_KW     : 
CALL_METHOD          : 
COMPARE_OP           : 
DELETE_ATTR          : 
DELETE_DEREF         : 
DELETE_FAST          : 
DELETE_GLOBAL        : 
DELETE_NAME          : 
DELETE_SUBSCR        : 
DUP_TOP              : 
DUP_TOP_TWO          : 
END_ASYNC_FOR        : 
END_FINALLY          : 
EXTENDED_ARG         : 
FORMAT_VALUE         : 
FOR_ITER             : 
GET_AITER            : 38
GET_ANEXT            : 
GET_AWAITABLE        : 55
GET_ITER             : 53
GET_YIELD_FROM_ITER  : 54
IMPORT_FROM          : 
IMPORT_NAME          : 
IMPORT_STAR          : 
INPLACE_ADD          : 40
INPLACE_AND          : 58
INPLACE_FLOOR_DIVIDE : 35
INPLACE_LSHIFT       : 56
INPLACE_MATRIX_MULTIPLY : 19
INPLACE_MODULO       : 46
INPLACE_MULTIPLY     : 44
INPLACE_OR           : 60
INPLACE_POWER        : 52
INPLACE_RSHIFT       : 57
INPLACE_SUBTRACT     : 42
INPLACE_TRUE_DIVIDE  : 37
INPLACE_XOR          : 59
JUMP_ABSOLUTE        : 
JUMP_FORWARD         : 
JUMP_IF_FALSE_OR_POP : 
JUMP_IF_TRUE_OR_POP  : 
LIST_APPEND          : 
LOAD_ATTR            : 15
LOAD_BUILD_CLASS     : 
LOAD_CLASSDEREF      : 
LOAD_CLOSURE         : 
LOAD_CONST           : 4
LOAD_DEREF           : 13
LOAD_FAST            : 7
LOAD_GLOBAL          : 1
LOAD_METHOD          : 
LOAD_NAME            : 10
MAKE_FUNCTION        : 
MAP_ADD              : 
NOP                  : 
POP_BLOCK            : 
POP_EXCEPT           : 
POP_FINALLY          : 
POP_JUMP_IF_FALSE    : 
POP_JUMP_IF_TRUE     : 
POP_TOP              : 2
PRINT_EXPR           : 
RAISE_VARARGS        : 
RETURN_VALUE         : 45
ROT_FOUR             : 36
ROT_THREE            : 34 36
ROT_TWO              : 32 34 36
SETUP_ANNOTATIONS    : 
SETUP_ASYNC_WITH     : 
SETUP_FINALLY        : 
SETUP_WITH           : 
SET_ADD              : 
STORE_ATTR           : 16
STORE_DEREF          : 14
STORE_FAST           : 8
STORE_GLOBAL         : 5
STORE_NAME           : 11
STORE_SUBSCR         : 18
UNARY_INVERT         : 12
UNARY_NEGATIVE       : 6
UNARY_NOT            : 9
UNARY_POSITIVE       : 3
UNPACK_EX            : 41
UNPACK_SEQUENCE      : 39
WITH_CLEANUP_FINISH  : 
WITH_CLEANUP_START   : 
YIELD_FROM           : 
YIELD_VALUE          : 
error                : 

Nonterminals, with rules where they appear

expression           : 3 6 9 12 15 16 17 17 18 18 19 19 21 21 23 23 24 24 25 25 27 27 29 29 30 31 31 32 32 33 33 34 34 34 35 35 36 36 36 36 37 37 38 39 40 40 41 42 42 44 44 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 55 56 56 57 57 58 58 59 59 60 60
statement            : 26 28
statement_list       : 28 0
store                : 20 22 30
store_list           : 22 43
unpack_expression    : 43

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (26) statement_list -> . statement
    (28) statement_list -> . statement_list statement
    (30) statement -> . store expression
    (43) statement -> . store_list unpack_expression
    (45) statement -> . RETURN_VALUE expression
    (2) store -> . POP_TOP
    (5) store -> . STORE_GLOBAL
    (8) store -> . STORE_FAST
    (11) store -> . STORE_NAME
    (14) store -> . STORE_DEREF
    (16) store -> . STORE_ATTR expression
    (18) store -> . STORE_SUBSCR expression expression
    (20) store_list -> . store
    (22) store_list -> . store_list store

    RETURN_VALUE    shift and go to state 5
    POP_TOP         shift and go to state 6
    STORE_GLOBAL    shift and go to state 7
    STORE_FAST      shift and go to state 8
    STORE_NAME      shift and go to state 9
    STORE_DEREF     shift and go to state 10
    STORE_ATTR      shift and go to state 11
    STORE_SUBSCR    shift and go to state 12

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    store                          shift and go to state 3
    store_list                     shift and go to state 4

state 1

    (0) S' -> statement_list .
    (28) statement_list -> statement_list . statement
    (30) statement -> . store expression
    (43) statement -> . store_list unpack_expression
    (45) statement -> . RETURN_VALUE expression
    (2) store -> . POP_TOP
    (5) store -> . STORE_GLOBAL
    (8) store -> . STORE_FAST
    (11) store -> . STORE_NAME
    (14) store -> . STORE_DEREF
    (16) store -> . STORE_ATTR expression
    (18) store -> . STORE_SUBSCR expression expression
    (20) store_list -> . store
    (22) store_list -> . store_list store

    RETURN_VALUE    shift and go to state 5
    POP_TOP         shift and go to state 6
    STORE_GLOBAL    shift and go to state 7
    STORE_FAST      shift and go to state 8
    STORE_NAME      shift and go to state 9
    STORE_DEREF     shift and go to state 10
    STORE_ATTR      shift and go to state 11
    STORE_SUBSCR    shift and go to state 12

    statement                      shift and go to state 13
    store                          shift and go to state 3
    store_list                     shift and go to state 4

state 2

    (26) statement_list -> statement .

    RETURN_VALUE    reduce using rule 26 (statement_list -> statement .)
    POP_TOP         reduce using rule 26 (statement_list -> statement .)
    STORE_GLOBAL    reduce using rule 26 (statement_list -> statement .)
    STORE_FAST      reduce using rule 26 (statement_list -> statement .)
    STORE_NAME      reduce using rule 26 (statement_list -> statement .)
    STORE_DEREF     reduce using rule 26 (statement_list -> statement .)
    STORE_ATTR      reduce using rule 26 (statement_list -> statement .)
    STORE_SUBSCR    reduce using rule 26 (statement_list -> statement .)
    $end            reduce using rule 26 (statement_list -> statement .)


state 3

    (30) statement -> store . expression
    (20) store_list -> store .
    (1) expression -> . LOAD_GLOBAL
    (3) expression -> . UNARY_POSITIVE expression
    (4) expression -> . LOAD_CONST
    (6) expression -> . UNARY_NEGATIVE expression
    (7) expression -> . LOAD_FAST
    (9) expression -> . UNARY_NOT expression
    (10) expression -> . LOAD_NAME
    (12) expression -> . UNARY_INVERT expression
    (13) expression -> . LOAD_DEREF
    (15) expression -> . LOAD_ATTR expression
    (17) expression -> . BINARY_MATRIX_MULTIPLY expression expression
    (19) expression -> . INPLACE_MATRIX_MULTIPLY expression expression
    (21) expression -> . BINARY_POWER expression expression
    (23) expression -> . BINARY_MULTIPLY expression expression
    (24) expression -> . BINARY_MODULO expression expression
    (25) expression -> . BINARY_ADD expression expression
    (27) expression -> . BINARY_SUBTRACT expression expression
    (29) expression -> . BINARY_SUBSCR expression expression
    (31) expression -> . BINARY_FLOOR_DIVIDE expression expression
    (33) expression -> . BINARY_TRUE_DIVIDE expression expression
    (35) expression -> . INPLACE_FLOOR_DIVIDE expression expression
    (37) expression -> . INPLACE_TRUE_DIVIDE expression expression
    (38) expression -> . GET_AITER expression
    (40) expression -> . INPLACE_ADD expression expression
    (42) expression -> . INPLACE_SUBTRACT expression expression
    (44) expression -> . INPLACE_MULTIPLY expression expression
    (46) expression -> . INPLACE_MODULO expression expression
    (47) expression -> . BINARY_LSHIFT expression expression
    (48) expression -> . BINARY_RSHIFT expression expression
    (49) expression -> . BINARY_AND expression expression
    (50) expression -> . BINARY_XOR expression expression
    (51) expression -> . BINARY_OR expression expression
    (52) expression -> . INPLACE_POWER expression expression
    (53) expression -> . GET_ITER expression
    (54) expression -> . GET_YIELD_FROM_ITER expression
    (55) expression -> . GET_AWAITABLE expression
    (56) expression -> . INPLACE_LSHIFT expression expression
    (57) expression -> . INPLACE_RSHIFT expression expression
    (58) expression -> . INPLACE_AND expression expression
    (59) expression -> . INPLACE_XOR expression expression
    (60) expression -> . INPLACE_OR expression expression

    ROT_TWO         reduce using rule 20 (store_list -> store .)
    UNPACK_SEQUENCE reduce using rule 20 (store_list -> store .)
    UNPACK_EX       reduce using rule 20 (store_list -> store .)
    POP_TOP         reduce using rule 20 (store_list -> store .)
    STORE_GLOBAL    reduce using rule 20 (store_list -> store .)
    STORE_FAST      reduce using rule 20 (store_list -> store .)
    STORE_NAME      reduce using rule 20 (store_list -> store .)
    STORE_DEREF     reduce using rule 20 (store_list -> store .)
    STORE_ATTR      reduce using rule 20 (store_list -> store .)
    STORE_SUBSCR    reduce using rule 20 (store_list -> store .)
    LOAD_GLOBAL     shift and go to state 15
    UNARY_POSITIVE  shift and go to state 16
    LOAD_CONST      shift and go to state 17
    UNARY_NEGATIVE  shift and go to state 18
    LOAD_FAST       shift and go to state 19
    UNARY_NOT       shift and go to state 20
    LOAD_NAME       shift and go to state 21
    UNARY_INVERT    shift and go to state 22
    LOAD_DEREF      shift and go to state 23
    LOAD_ATTR       shift and go to state 24
    BINARY_MATRIX_MULTIPLY shift and go to state 25
    INPLACE_MATRIX_MULTIPLY shift and go to state 26
    BINARY_POWER    shift and go to state 27
    BINARY_MULTIPLY shift and go to state 28
    BINARY_MODULO   shift and go to state 29
    BINARY_ADD      shift and go to state 30
    BINARY_SUBTRACT shift and go to state 31
    BINARY_SUBSCR   shift and go to state 32
    BINARY_FLOOR_DIVIDE shift and go to state 33
    BINARY_TRUE_DIVIDE shift and go to state 34
    INPLACE_FLOOR_DIVIDE shift and go to state 35
    INPLACE_TRUE_DIVIDE shift and go to state 36
    GET_AITER       shift and go to state 37
    INPLACE_ADD     shift and go to state 38
    INPLACE_SUBTRACT shift and go to state 39
    INPLACE_MULTIPLY shift and go to state 40
    INPLACE_MODULO  shift and go to state 41
    BINARY_LSHIFT   shift and go to state 42
    BINARY_RSHIFT   shift and go to state 43
    BINARY_AND      shift and go to state 44
    BINARY_XOR      shift and go to state 45
    BINARY_OR       shift and go to state 46
    INPLACE_POWER   shift and go to state 47
    GET_ITER        shift and go to state 48
    GET_YIELD_FROM_ITER shift and go to state 49
    GET_AWAITABLE   shift and go to state 50
    INPLACE_LSHIFT  shift and go to state 51
    INPLACE_RSHIFT  shift and go to state 52
    INPLACE_AND     shift and go to state 53
    INPLACE_XOR     shift and go to state 54
    INPLACE_OR      shift and go to state 55

    expression                     shift and go to state 14

state 4

    (43) statement -> store_list . unpack_expression
    (22) store_list -> store_list . store
    (32) unpack_expression -> . ROT_TWO expression expression
    (34) unpack_expression -> . ROT_TWO ROT_THREE expression expression expression
    (36) unpack_expression -> . ROT_TWO ROT_THREE ROT_FOUR expression expression expression expression
    (39) unpack_expression -> . UNPACK_SEQUENCE expression
    (41) unpack_expression -> . UNPACK_EX expression
    (2) store -> . POP_TOP
    (5) store -> . STORE_GLOBAL
    (8) store -> . STORE_FAST
    (11) store -> . STORE_NAME
    (14) store -> . STORE_DEREF
    (16) store -> . STORE_ATTR expression
    (18) store -> . STORE_SUBSCR expression expression

    ROT_TWO         shift and go to state 58
    UNPACK_SEQUENCE shift and go to state 59
    UNPACK_EX       shift and go to state 60
    POP_TOP         shift and go to state 6
    STORE_GLOBAL    shift and go to state 7
    STORE_FAST      shift and go to state 8
    STORE_NAME      shift and go to state 9
    STORE_DEREF     shift and go to state 10
    STORE_ATTR      shift and go to state 11
    STORE_SUBSCR    shift and go to state 12

    unpack_expression              shift and go to state 56
    store                          shift and go to state 57

state 5

    (45) statement -> RETURN_VALUE . expression
    (1) expression -> . LOAD_GLOBAL
    (3) expression -> . UNARY_POSITIVE expression
    (4) expression -> . LOAD_CONST
    (6) expression -> . UNARY_NEGATIVE expression
    (7) expression -> . LOAD_FAST
    (9) expression -> . UNARY_NOT expression
    (10) expression -> . LOAD_NAME
    (12) expression -> . UNARY_INVERT expression
    (13) expression -> . LOAD_DEREF
    (15) expression -> . LOAD_ATTR expression
    (17) expression -> . BINARY_MATRIX_MULTIPLY expression expression
    (19) expression -> . INPLACE_MATRIX_MULTIPLY expression expression
    (21) expression -> . BINARY_POWER expression expression
    (23) expression -> . BINARY_MULTIPLY expression expression
    (24) expression -> . BINARY_MODULO expression expression
    (25) expression -> . BINARY_ADD expression expression
    (27) expression -> . BINARY_SUBTRACT expression expression
    (29) expression -> . BINARY_SUBSCR expression expression
    (31) expression -> . BINARY_FLOOR_DIVIDE expression expression
    (33) expression -> . BINARY_TRUE_DIVIDE expression expression
    (35) expression -> . INPLACE_FLOOR_DIVIDE expression expression
    (37) expression -> . INPLACE_TRUE_DIVIDE expression expression
    (38) expression -> . GET_AITER expression
    (40) expression -> . INPLACE_ADD expression expression
    (42) expression -> . INPLACE_SUBTRACT expression expression
    (44) expression -> . INPLACE_MULTIPLY expression expression
    (46) expression -> . INPLACE_MODULO expression expression
    (47) expression -> . BINARY_LSHIFT expression expression
    (48) expression -> . BINARY_RSHIFT expression expression
    (49) expression -> . BINARY_AND expression expression
    (50) expression -> . BINARY_XOR expression expression
    (51) expression -> . BINARY_OR expression expression
    (52) expression -> . INPLACE_POWER expression expression
    (53) expression -> . GET_ITER expression
    (54) expression -> . GET_YIELD_FROM_ITER expression
    (55) expression -> . GET_AWAITABLE expression
    (56) expression -> . INPLACE_LSHIFT expression expression
    (57) expression -> . INPLACE_RSHIFT expression expression
    (58) expression -> . INPLACE_AND expression expression
    (59) expression -> . INPLACE_XOR expression expression
    (60) expression -> . INPLACE_OR expression expression

    LOAD_GLOBAL     shift and go to state 15
    UNARY_POSITIVE  shift and go to state 16
    LOAD_CONST      shift and go to state 17
    UNARY_NEGATIVE  shift and go to state 18
    LOAD_FAST       shift and go to state 19
    UNARY_NOT       shift and go to state 20
    LOAD_NAME       shift and go to state 21
    UNARY_INVERT    shift and go to state 22
    LOAD_DEREF      shift and go to state 23
    LOAD_ATTR       shift and go to state 24
    BINARY_MATRIX_MULTIPLY shift and go to state 25
    INPLACE_MATRIX_MULTIPLY shift and go to state 26
    BINARY_POWER    shift and go to state 27
    BINARY_MULTIPLY shift and go to state 28
    BINARY_MODULO   shift and go to state 29
    BINARY_ADD      shift and go to state 30
    BINARY_SUBTRACT shift and go to state 31
    BINARY_SUBSCR   shift and go to state 32
    BINARY_FLOOR_DIVIDE shift and go to state 33
    BINARY_TRUE_DIVIDE shift and go to state 34
    INPLACE_FLOOR_DIVIDE shift and go to state 35
    INPLACE_TRUE_DIVIDE shift and go to state 36
    GET_AITER       shift and go to state 37
    INPLACE_ADD     shift and go to state 38
    INPLACE_SUBTRACT shift and go to state 39
    INPLACE_MULTIPLY shift and go to state 40
    INPLACE_MODULO  shift and go to state 41
    BINARY_LSHIFT   shift and go to state 42
    BINARY_RSHIFT   shift and go to state 43
    BINARY_AND      shift and go to state 44
    BINARY_XOR      shift and go to state 45
    BINARY_OR       shift and go to state 46
    INPLACE_POWER   shift and go to state 47
    GET_ITER        shift and go to state 48
    GET_YIELD_FROM_ITER shift and go to state 49
    GET_AWAITABLE   shift and go to state 50
    INPLACE_LSHIFT  shift and go to state 51
    INPLACE_RSHIFT  shift and go to state 52
    INPLACE_AND     shift and go to state 53
    INPLACE_XOR     shift and go to state 54
    INPLACE_OR      shift and go to state 55

    expression                     shift and go to state 61

state 6

    (2) store -> POP_TOP .

    LOAD_GLOBAL     reduce using rule 2 (store -> POP_TOP .)
    UNARY_POSITIVE  reduce using rule 2 (store -> POP_TOP .)
    LOAD_CONST      reduce using rule 2 (store -> POP_TOP .)
    UNARY_NEGATIVE  reduce using rule 2 (store -> POP_TOP .)
    LOAD_FAST       reduce using rule 2 (store -> POP_TOP .)
    UNARY_NOT       reduce using rule 2 (store -> POP_TOP .)
    LOAD_NAME       reduce using rule 2 (store -> POP_TOP .)
    UNARY_INVERT    reduce using rule 2 (store -> POP_TOP .)
    LOAD_DEREF      reduce using rule 2 (store -> POP_TOP .)
    LOAD_ATTR       reduce using rule 2 (store -> POP_TOP .)
    BINARY_MATRIX_MULTIPLY reduce using rule 2 (store -> POP_TOP .)
    INPLACE_MATRIX_MULTIPLY reduce using rule 2 (store -> POP_TOP .)
    BINARY_POWER    reduce using rule 2 (store -> POP_TOP .)
    BINARY_MULTIPLY reduce using rule 2 (store -> POP_TOP .)
    BINARY_MODULO   reduce using rule 2 (store -> POP_TOP .)
    BINARY_ADD      reduce using rule 2 (store -> POP_TOP .)
    BINARY_SUBTRACT reduce using rule 2 (store -> POP_TOP .)
    BINARY_SUBSCR   reduce using rule 2 (store -> POP_TOP .)
    BINARY_FLOOR_DIVIDE reduce using rule 2 (store -> POP_TOP .)
    BINARY_TRUE_DIVIDE reduce using rule 2 (store -> POP_TOP .)
    INPLACE_FLOOR_DIVIDE reduce using rule 2 (store -> POP_TOP .)
    INPLACE_TRUE_DIVIDE reduce using rule 2 (store -> POP_TOP .)
    GET_AITER       reduce using rule 2 (store -> POP_TOP .)
    INPLACE_ADD     reduce using rule 2 (store -> POP_TOP .)
    INPLACE_SUBTRACT reduce using rule 2 (store -> POP_TOP .)
    INPLACE_MULTIPLY reduce using rule 2 (store -> POP_TOP .)
    INPLACE_MODULO  reduce using rule 2 (store -> POP_TOP .)
    BINARY_LSHIFT   reduce using rule 2 (store -> POP_TOP .)
    BINARY_RSHIFT   reduce using rule 2 (store -> POP_TOP .)
    BINARY_AND      reduce using rule 2 (store -> POP_TOP .)
    BINARY_XOR      reduce using rule 2 (store -> POP_TOP .)
    BINARY_OR       reduce using rule 2 (store -> POP_TOP .)
    INPLACE_POWER   reduce using rule 2 (store -> POP_TOP .)
    GET_ITER        reduce using rule 2 (store -> POP_TOP .)
    GET_YIELD_FROM_ITER reduce using rule 2 (store -> POP_TOP .)
    GET_AWAITABLE   reduce using rule 2 (store -> POP_TOP .)
    INPLACE_LSHIFT  reduce using rule 2 (store -> POP_TOP .)
    INPLACE_RSHIFT  reduce using rule 2 (store -> POP_TOP .)
    INPLACE_AND     reduce using rule 2 (store -> POP_TOP .)
    INPLACE_XOR     reduce using rule 2 (store -> POP_TOP .)
    INPLACE_OR      reduce using rule 2 (store -> POP_TOP .)
    ROT_TWO         reduce using rule 2 (store -> POP_TOP .)
    UNPACK_SEQUENCE reduce using rule 2 (store -> POP_TOP .)
    UNPACK_EX       reduce using rule 2 (store -> POP_TOP .)
    POP_TOP         reduce using rule 2 (store -> POP_TOP .)
    STORE_GLOBAL    reduce using rule 2 (store -> POP_TOP .)
    STORE_FAST      reduce using rule 2 (store -> POP_TOP .)
    STORE_NAME      reduce using rule 2 (store -> POP_TOP .)
    STORE_DEREF     reduce using rule 2 (store -> POP_TOP .)
    STORE_ATTR      reduce using rule 2 (store -> POP_TOP .)
    STORE_SUBSCR    reduce using rule 2 (store -> POP_TOP .)


state 7

    (5) store -> STORE_GLOBAL .

    LOAD_GLOBAL     reduce using rule 5 (store -> STORE_GLOBAL .)
    UNARY_POSITIVE  reduce using rule 5 (store -> STORE_GLOBAL .)
    LOAD_CONST      reduce using rule 5 (store -> STORE_GLOBAL .)
    UNARY_NEGATIVE  reduce using rule 5 (store -> STORE_GLOBAL .)
    LOAD_FAST       reduce using rule 5 (store -> STORE_GLOBAL .)
    UNARY_NOT       reduce using rule 5 (store -> STORE_GLOBAL .)
    LOAD_NAME       reduce using rule 5 (store -> STORE_GLOBAL .)
    UNARY_INVERT    reduce using rule 5 (store -> STORE_GLOBAL .)
    LOAD_DEREF      reduce using rule 5 (store -> STORE_GLOBAL .)
    LOAD_ATTR       reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_MATRIX_MULTIPLY reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_MATRIX_MULTIPLY reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_POWER    reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_MULTIPLY reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_MODULO   reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_ADD      reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_SUBTRACT reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_SUBSCR   reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_FLOOR_DIVIDE reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_TRUE_DIVIDE reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_FLOOR_DIVIDE reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_TRUE_DIVIDE reduce using rule 5 (store -> STORE_GLOBAL .)
    GET_AITER       reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_ADD     reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_SUBTRACT reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_MULTIPLY reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_MODULO  reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_LSHIFT   reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_RSHIFT   reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_AND      reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_XOR      reduce using rule 5 (store -> STORE_GLOBAL .)
    BINARY_OR       reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_POWER   reduce using rule 5 (store -> STORE_GLOBAL .)
    GET_ITER        reduce using rule 5 (store -> STORE_GLOBAL .)
    GET_YIELD_FROM_ITER reduce using rule 5 (store -> STORE_GLOBAL .)
    GET_AWAITABLE   reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_LSHIFT  reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_RSHIFT  reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_AND     reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_XOR     reduce using rule 5 (store -> STORE_GLOBAL .)
    INPLACE_OR      reduce using rule 5 (store -> STORE_GLOBAL .)
    ROT_TWO         reduce using rule 5 (store -> STORE_GLOBAL .)
    UNPACK_SEQUENCE reduce using rule 5 (store -> STORE_GLOBAL .)
    UNPACK_EX       reduce using rule 5 (store -> STORE_GLOBAL .)
    POP_TOP         reduce using rule 5 (store -> STORE_GLOBAL .)
    STORE_GLOBAL    reduce using rule 5 (store -> STORE_GLOBAL .)
    STORE_FAST      reduce using rule 5 (store -> STORE_GLOBAL .)
    STORE_NAME      reduce using rule 5 (store -> STORE_GLOBAL .)
    STORE_DEREF     reduce using rule 5 (store -> STORE_GLOBAL .)
    STORE_ATTR      reduce using rule 5 (store -> STORE_GLOBAL .)
    STORE_SUBSCR    reduce using rule 5 (store -> STORE_GLOBAL .)


state 8

    (8) store -> STORE_FAST .
